<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">baruckis.com SLIDE MENU</string>
    <string name="main_title">baruckis.com</string>
    <string name="first_title">Sliding menu from XML</string>
    <string name="second_title">Sliding menu from class</string>
    <string name="contact_email">andrius.baruckis@gmail.com</string>
    <string name="contact_email_subject">Sliding Menu Implementation Example feedback</string>
    <string name="source_code_repository_link">https://github.com/baruckis/Android-SlidingMenuImplementation</string>
    <string name="tutorial_title">SLIDING MENU IMPLEMENTATION EXAMPLE</string>
    <string name="first_frame_title_label">SLIDING MENU FROM XML</string>
    <string name="first_frame_subtitle_label">Menu content is a list fragment filled with data loaded from XML file.</string>
    <string name="second_frame_title_label">SLIDING MENU FROM CLASS</string>
    <string name="second_frame_subtitle_label">Menu content is a list fragment filled with data loaded from a class.</string>
    <string name="textview_top_left_label_for_xml">Press on the up icon to hide sliding out menu if it is visible, or to go back to previuos screen.</string>
    <string name="textview_left_label_for_xml">Swipe with the finger to slide out menu from the left side.</string>
    <string name="textview_top_left_label_for_class">Press on the icon to show or hide sliding out menu.</string>
    <string name="textview_left_label_for_class">Swipe with the finger to slide out menu from the left side.</string>
    <string name="empty_string"></string>

    <!-- MENU -->
    <string name="menu_github_short">GitHub</string>
    <string name="menu_github_long">Source on GitHub</string>
    <string name="menu_about_short">About</string>
    <string name="menu_about_long">About this app</string>
    <string name="menu_contact_short">Contact</string>
    <string name="menu_contact_long">Contact developer</string>

    <!-- DIALOGS -->
    <string name="dialog_about_title">"About"</string>
    <string name="dialog_about_message">&lt;b>Sliding Menu Implementation Example&lt;/b> is an example app,
        which shows how to do implementation of an Android library SlidingMenu developed by Jeremy Feinstein. It has two different approaches.
        First one demonstrates left side sliding out menu with a list fragment, as a content, filled with data loaded from XML file.
        Second one demonstrates left side sliding out menu with a list fragment, as a content, filled with data loaded from a class.
        
        &lt;br>&lt;br>
        SlidingMenu Android library can be found at GitHub at &lt;a href="https://github.com/jfeinstein10/SlidingMenu">https://github.com/jfeinstein10/SlidingMenu&lt;/a>.
        &lt;br>
        Free icons used in this app are taken from &lt;a href="http://www.androidicons.com">http://www.androidicons.com&lt;/a>.
        
        &lt;br>&lt;br>
		Please feel free to grab the source of this app at the GitHub by pressing little octocat icon in the ActionBar
		and use it anywhere you want at your Android projects.
		I hope you will find it clear and useful! 
		
		&lt;br>&lt;br>
		Author,
		&lt;br>
		&lt;b>Andrius Baruckis&lt;/b>
		&lt;br>
		&lt;a href="http://www.baruckis.com">http://www.baruckis.com&lt;/a></string>
    <string name="dialog_about_button_text">"Close"</string>
    <string name="dialog_list_item_click_button_text">"OK"</string>

    <!-- TOASTS -->
    <string name="toast_contact_no_email">"Sorry, we could not find any e-mail apps on your device. Please install first and try again."</string>
    <string name="toast_unsupported_encoding">"Sorry, your device does not support UTF-8 encoding."</string>
    <string name="toast_sliding_menu_toggle">"Sliding menu toggled!"</string>
    <string name="toast_sliding_menu_custom_action">"This could call custom action!"</string>
    <string name="toast_sliding_menu_no_action_default">"No action by default."</string>

</resources>