<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tutorial_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:alpha="0.8"
        android:background="@android:color/black"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/tutorial_title"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tutorial_title"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:background="@drawable/highlight_selector"
            android:clickable="true"
            android:onClick="launchFirst"
            android:padding="5dp" >

            <RelativeLayout
                android:id="@+id/first_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_green_dark" >

                <TextView
                    android:id="@+id/first_frame_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:alpha="0.8"
                    android:background="@android:color/black"
                    android:padding="5dp"
                    android:text="@string/first_frame_title_label"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/first_frame_subtitle_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/first_frame_title_label"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:alpha="0.8"
                    android:background="@android:color/black"
                    android:padding="5dp"
                    android:text="@string/first_frame_subtitle_label"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:background="@drawable/highlight_selector"
            android:clickable="true"
            android:onClick="launchSecond"
            android:padding="5dp" >

            <RelativeLayout
                android:id="@+id/second_part_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_dark" >

                <TextView
                    android:id="@+id/second_frame_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:alpha="0.8"
                    android:background="@android:color/black"
                    android:padding="5dp"
                    android:text="@string/second_frame_title_label"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/second_frame_subtitle_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/second_frame_title_label"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:alpha="0.8"
                    android:background="@android:color/black"
                    android:padding="5dp"
                    android:text="@string/second_frame_subtitle_label"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>